<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="downloadDetails"
            type="com.example.load_app.model.DownloadDetails" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.LoadApp.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/Theme.LoadApp.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.motion.widget.MotionLayout
            android:id="@+id/motionLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutDescription="@xml/activity_detail_scene"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context=".DetailActivity"
            tools:showIn="@layout/activity_detail">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_name"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="32dp"
                tools:layout_editor_absoluteY="32dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="73dp"
                tools:layout_editor_absoluteY="194dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{downloadDetails.name}"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="411dp"
                tools:layout_editor_absoluteY="80dp"
                tools:text="@string/glide" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{downloadDetails.status.text}"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="102dp"
                tools:layout_editor_absoluteY="162dp"
                tools:text="Success" />
        </androidx.constraintlayout.motion.widget.MotionLayout>

        <Button
            android:id="@+id/okButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_margin="@dimen/fab_margin"
            android:backgroundTint="?colorAccent"
            android:padding="8dp"
            android:paddingHorizontal="8dp"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:srcCompat="@android:drawable/ic_dialog_email"
            tools:ignore="TextContrastCheck" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>